# glrun

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: example1.gs  example2.gs
src/: main.rs  script.rs
